fix: white spaces get in touch page

--- a/src/components/getInTouch/get-in-touch-form.scss
+++ b/src/components/getInTouch/get-in-touch-form.scss
@@ -4,8 +4,6 @@
   gap: 30px;
   width: 100%;
   order: 2;
-  @media only screen and (max-width: 1250px) {
-  }
 
   .submit {
     display: flex;
