--- a/src/components/getInTouch/get-in-touch-slogan.scss
+++ b/src/components/getInTouch/get-in-touch-slogan.scss
@@ -10,6 +10,10 @@
     justify-content: space-between;
     width: 100%;
 
+    @media only screen and (max-width: 600px) {
+      gap: 0px;
+    }
+
     .title {
       display: flex;
       align-items: center;
