--- a/src/pages/get-in-touch.scss
+++ b/src/pages/get-in-touch.scss
@@ -15,6 +15,10 @@
     gap: 100px;
     width: 50%;
 
+    @media only screen and (max-width: 600px) {
+      gap: 60px;
+    }
+
     @media only screen and (max-width: 1000px) {
       width: 100%;
     }
